Safari bug fixing, collapsable menus

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -35,7 +35,6 @@ body, html{
   margin:0;
   height: auto;
   white-space: nowrap;
-  overflow-x: hidden;
 }
 
 h1{
@@ -56,7 +55,6 @@ h2{
 h3{
   margin: 0;
   padding: 0;
-  margin-bottom: 10px;
   font-weight: 700;
   font-size: 28px;
 }
@@ -74,6 +72,7 @@ h5{
   font-size: 28px;
   padding: 0;
   margin:0;
+  margin-top: 32px;
   font-weight: 500;
   font-style: normal;
 }
@@ -148,7 +147,7 @@ Main Menu
   align-items: center;
   justify-content: center;
 
-  height: 106px;
+  height: 107px;
   width: 100%;
   cursor: pointer;
 }
@@ -233,9 +232,9 @@ Header
 
 .headerArrow{
   transition: transform 200ms;
-  transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -webkit-transform: rotate(0deg);
+  transform: rotate3d(0, 0, 1, 0deg);
+  -moz-transform: rotate3d(0, 0, 1, 0deg);
+  -webkit-transform: rotate3d(0, 0, 1, 0deg);
   -webkit-transform-origin: 50%% 50%%; /* Chrome, Safari, Opera */
   -webkit-backface-visibility: hidden;
   -webkit-transform-style: preserve-3d;
@@ -491,7 +490,6 @@ bottomSpace Page
 }
 
 .optionList{
-  margin-bottom: 40px;
 }
 
 .optionItem{
@@ -505,15 +503,34 @@ bottomSpace Page
   border-bottom: none;
 }
 
-.listItem {
+.expandButton{
+  overflow: hidden;
+  background-color: #FAFAFA;
   display: flex;
   align-items: center;
-
   height: 94px;
+}
+
+.expandButton h5{
+  border-bottom: 3px solid black;
+}
+
+.listItem {
+  overflow: hidden;
+  background-color: #FAFAFA;
+  display: flex;
+  align-items: center;
+  height: 94px;
+  transition: height 300ms;
 }
 
 .listItem:last-child{
   border-bottom: none;
+}
+
+.list .listHider:nth-child(n+7) {
+   height: 0;
+   border-color: #FAFAFA;
 }
 
 .map{
@@ -554,7 +571,6 @@ label .select-item {
   }
 
   h3{
-    margin-bottom: 23px;
     font-size: 26px;
   }
 
@@ -650,7 +666,6 @@ label .select-item {
   }
 
   h3{
-    margin-bottom: 23px;
     font-size: 14px;
   }
 
